--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: pip install requests bs4
 
+      - name: run bash setup
+        run: setup.sh
+
       - name: run scraper
         run: python scrapers/vacancies.py
 
