--- a/scrape.yaml
+++ b/scrape.yaml
@@ -1,10 +1,8 @@
 name: Scrape vacancies from the Maryland State Employees Database
 
 on:
-  push:
-    push:
   schedule:
-    - cron: "0 12 * * *"
+    - cron: '0 0 * * *' # run every day at midnight
   workflow_dispatch:
 
 jobs:
