fifth time's the charm

--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests bs4
+        run: pip install requests bs4 pandas 
 
       - name: run scraper
         run: python scrapers/vacancies.py
