--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -22,6 +22,8 @@ jobs:
         run: pip install requests bs4 pandas
 
       - name: run scraper
+        env: 
+          SLACK_API_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
         run: python scrapers/vacancies.py
 
       - name: "Commit and push if it changed"
@@ -32,3 +34,4 @@ jobs:
             timestamp=$(date -u)
             git commit -m "Latest data: ${timestamp}" || exit 0
             git push
+      
