--- a/scrape.yaml
+++ b/scrape.yaml
@@ -20,6 +20,8 @@ jobs:
         run: pip install requests bs4
 
       - name: run scraper
+        env: 
+          SLACK_API_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
         run: python scrapers/vacancies.py
 
       - name: "Commit and push if it changed"
