oops forgot to update yaml!

--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: run scraper
         env: 
           SLACK_API_TOKEN: ${{ secrets.SLACK_API_TOKEN }}
-        run: python scrapers/vacancies.py
+        run: python vacancies.py
         
 
       - name: "Commit and push if it changed"
